
* TODO Version 1.0
  [2013-02-21 Do 01:24]

** TODO change version number
   [2013-02-21 Do 01:27]
** TODO announce in org-mode mailing-list
   [2013-02-21 Do 01:28]
** TODO announce in emacs mailing-list
 [2013-02-21 Do 01:24]


* TODO Version 0.9
  [2013-02-21 Do 01:24]

** TODO finish keybindings
   [2013-03-08 Fr 12:01]
** TODO write 'navi-quit-and-switch'
   [2013-03-08 Fr 12:00]
** TODO make '?' and 'h' show C-h b
   [2013-03-08 Fr 11:58]
** TODO implement 'remote control' functions
   [2013-03-08 Fr 11:58]
** TODO write Worg article
   [2013-03-08 Fr 11:50]
** TODO ask about keybindings for functions with args.
   [2013-03-08 Fr 11:49]
** TODO fix wrong point location (always 1st match) after excursion to other buffers
   [2013-03-08 Fr 11:44]

When switching between the twin-buffers, automatic point-location seems to
work, but when switching to other, non-related buffers in between, and then
back to the original-buffer and then to the navi-buffer, point always ends up
at the first match. 

** DONE make navi derived major-mode
   CLOSED: [2013-03-08 Fr 11:42]
   :LOGBOOK:
   - State "DONE"       from "TODO"       [2013-03-08 Fr 11:42]
   :END:
   [2013-02-25 Mo 09:33]
** CANCELLED turn off fontification of matches???                 :CANCELLED:
   CLOSED: [2013-03-08 Fr 11:41]
   :LOGBOOK:
   - State "CANCELLED"  from "TODO"       [2013-03-08 Fr 11:41] \\
     in the end, the fontification is not so bad, maybe even useful.
   :END:
   [2013-02-21 Do 01:32]
** DONE global command: go-back-to-navi-buffer (at marker-position)
   CLOSED: [2013-02-25 Mo 09:33]
   :LOGBOOK:
   - State "DONE"       from "TODO"       [2013-02-25 Mo 09:33]
   :END:
   [2013-02-21 Do 01:30]
** TODO make functions that return from original-buffer to navi-buffer revert navi-buffer
   [2013-03-08 Fr 11:43]
** CANCELLED implement actualization hook for navi-buffers (always-up-to-date) :CANCELLED:
   CLOSED: [2013-03-08 Fr 11:42]
   :LOGBOOK: